--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx -y kill-port 4000 && nodemon index.js"
+    "start": "node index.js",
+    "dev": "npx -y kill-port 4000 && nodemon index.js"
   },
   "keywords": [],
   "author": "",
