--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,6 @@
 # Frontend Environment Variables
 # This is for LOCAL DEVELOPMENT - Netlify uses its own environment variables
 
-# Backend API URL - Update this to your Render backend URL for production
-REACT_APP_API_URL=https://react-notes-making-app-1vzt.onrender.com/api
+# Backend API URL - Production Render backend
+REACT_APP_API_URL=https://react-notes-making-app-avzt.onrender.com/api
+# REACT_APP_API_URL=http://localhost:4000/api
